Check the GC, pre-JIT, etc.